dont make radar fixed so that you can scroll on smaller displays

--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -68,7 +68,7 @@ header {
 }
 
 svg#radar-plot {
-  position: fixed;
+  position: absolute;
   top: 112px;
   right: 0;
   left: 0;
